# IFC2SB

./: README.md
additionals/: Dockerfile
cmake/: CMakeLists.txt
dox/: Doxyfile
sb_viewer/: IFCRB.cpp
src/: Clip.cpp  Clip.h  Clipper.cpp  Clipper.h  Graph.cpp  Graph.h  IfcCheck.cpp  IfcCheck.h  Intersector.cpp  Intersector.h  Kernel.cpp  Kernel.h  Kernel_fac.cpp  Kernel_mod.cpp  Kernel_occ.cpp  Kernel_pre.cpp  Layer.cpp  Layer.h  Product.cpp  Product.h  ShapeChecker.cpp  ShapeChecker.h  ShapeHealing.cpp  ShapeHealing.h  Space.cpp  Space.h  Topo.cpp  Topo.h  Topo2D.cpp  Topo2D.h  Viewer.cpp  Viewer.h  cFace.cpp  cFace.h  definitions.h  graph_2D.h  headers.h  ifc_creator.h  main.cpp  oFace.cpp  (+4 more)
src/intersector/: IntersectionRay.cpp  IntersectionRay.h  IntersectorInterface.cpp  IntersectorInterface.h  IntersectorModel.cpp  IntersectorModel.h  RayIntersector.cpp  RayIntersector.h  intersector_includes.h
src/octree/: base_interface.cpp  base_interface.h  eaf_interface.cpp  eaf_interface.h  geometry.cpp  geometry.h  model.cpp  model.h  octree.cpp  octree.h  octree_includes.h  octree_interface.cpp  octree_interface.h
src/stl_export/: SB_RWStl.cpp  SB_RWStl.h  SB_StlAPI_Writer.cpp  SB_StlAPI_Writer.h
src/viewer/: Application.cxx  Application.h  ApplicationCommon.cxx  ApplicationCommon.h  ApplicationTut.cxx  ApplicationTut.h  DocumentCommon.cxx  DocumentCommon.h  DocumentTut.cxx  DocumentTut.h  MDIWindow.cxx  MDIWindow.h  Material.cxx  Material.h  OcctWindow.cxx  OcctWindow.h  Translate.cxx  Translate.h  Transparency.cxx  Transparency.h  View.cxx  View.h  ViewerHelper.h  ViewerIncludes.h  ViewerMain.cpp  ViewerMain.h
